--- a/text/citace.bib
+++ b/text/citace.bib
@@ -500,4 +500,36 @@ keywords = "TLD"
     date={},
     urldate={2017-06-25},
 }
+
+@article{pilleClanek,
+title = "Dose measurements in space by the Hungarian Pille TLD system",
+journal = "Radiation Measurements",
+volume = "35",
+number = "5",
+pages = "381 - 391",
+year = "2002",
+note = "Radiaiton on the MIR Space Station",
+issn = "1350-4487",
+doi = "http://dx.doi.org/10.1016/S1350-4487(02)00071-9",
+url = "http://www.sciencedirect.com/science/article/pii/S1350448702000719",
+author = "I Apáthy and S Deme and I Fehér and Y.A Akatov and G Reitz and V.V Arkhanguelski",
+}
+
+@article{hspClanek,
+title = "Development of a high speed imaging microscope and new software for nuclear track detector analysis",
+journal = "Radiation Measurements",
+volume = "40",
+number = "2",
+pages = "311 - 315",
+year = "2005",
+note = "Proceedings of the 22nd International Conference on Nuclear Tracks in Solids",
+issn = "1350-4487",
+doi = "http://dx.doi.org/10.1016/j.radmeas.2005.02.013",
+url = "http://www.sciencedirect.com/science/article/pii/S1350448705000806",
+author = "N. Yasuda and K. Namiki and Y. Honma and Y. Umeshima and Y. Marumo and H. Ishii and E.R. Benton",
+keywords = "Line sensor",
+keywords = "Microscope",
+keywords = "Track detection",
+keywords = "High speed imaging"
+}
 %pozn.: clanky rozradit do kapitol (aby by to bylo prehlednejsi)
