--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -44,7 +44,7 @@ V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jede
 \end{figure}
 
 \section{Průběh experimentů}%mozna DOPLNIT:DOSTEL-1 meril kratsi dobu nez DOSTEL-2!!!!!!!!!!!!!
-Experiment DOSIS probíhal mezi lety 2009 a 2011. Doba trvání experimentu DOSIS3D byla původně stanovena na rozmezí let 2012-2016, avšak v roce 2016 byla prodloužena a experiment stále běží. V rámci těchto experimentů bylo v modulu Columbus zatím k dnešnímu datu (13. 5. 2017) postupně upevněno 10 sad pasivních detektorů (DOSIS -- dvě sady, DOSIS3D -- devět sad) a na květen/červen 2017 se plánuje upevnění jedenácté. Každá sada obsahovala výše zmíněných 11 PDP. Tab.~\ref{tab:dosis_timeline_passive} obsahuje informace o obměně sad pasivních detektorů (dopravení na ISS, instalaci, doba používání, ukončení měření,
+Experiment DOSIS probíhal mezi lety 2009 a 2011. Doba trvání experimentu DOSIS3D byla původně stanovena na rozmezí let 2012-2016, avšak v roce 2016 byla prodloužena a experiment stále běží. V rámci těchto experimentů bylo v modulu Columbus zatím k dnešnímu datu (13. 5. 2017) postupně upevněno 10 sad pasivních detektorů (DOSIS -- dvě sady, DOSIS3D -- devět sad) a na květen/červen 2017 se plánuje upevnění jedenácté. Každá sada obsahovala výše zmíněných 11 PDP. Tab.~\ref{tab:dosis_timeline_passive} obsahuje informace o obměně sad pasivních detektorů (dopravení na ISS, instalaci, doba expozice, ukončení měření,
 návrat na Zem, nadmořská výška ISS); u sad 7, 8, 9 experimentu DOSIS3D nejsou doposud k dispozici údaje o nadmořské výšce; sada 10 je stále na ISS. 
 
 První z experimentů započal 15. července 2009 startem raketoplánu Endeavor, na jehož palubě byla
@@ -142,25 +142,25 @@ NPI			 &Al$_2$O$_3$:C&Al$_2$O$_3$:C\\
   \end{tabular}
 \end{table}
 
-NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhodnocovány pomocí čtecího systému RA’94 (THORN EMI 9789 QB)+TOLEDO 654 TLD Reader; rychlost zahřívání u obou je rovna 10 $^{\circ}$C/s; první není předehříván, druhý je předehříván na 150 $^{\circ}$C (22 s); annealing probíhá 20 minut za 700 $^{\circ}$C (Al$_2$O$_3$:C), respektive 10 minut za 380 $^{\circ}$C (CaSO$_4$:Dy); ochlazovací rychlost je vysoká u obou; kalibrování probíhá u obou pomocí $^{137}$Cs; u obou je vyhodnocována plocha pod vyhřívací křivkou. Oba dva mají průměr roven 5 mm a tloušťku rovnou 1 mm.
+NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhodnocovány pomocí čtecího systému RA’94 (THORN EMI 9789 QB) nebo TOLEDO 654 TLD Reader; rychlost zahřívání u obou je rovna 10 $^{\circ}$C/s; první není předehříván, druhý je předehříván na 150 $^{\circ}$C (22 s); annealing probíhá 20 minut za 700 $^{\circ}$C (Al$_2$O$_3$:C), respektive 10 minut za 380 $^{\circ}$C (CaSO$_4$:Dy); oba dva rychle chladnou; kalibrování probíhá u obou pomocí $^{137}$Cs; u obou je vyhodnocována plocha pod vyhřívací křivkou. Oba dva mají průměr roven 5 mm a tloušťku rovnou 1 mm.
 \subsection{Opticky stimulované luminiscenční detektory}
 Detektory založené na opticky stimulované luminiscenci využívají následující instituce: OSU, SCK$\cdot$CEN, NASA/SRAG, NIRS. Jsou vyrobené z jednoho materiálu (Al$_2$O$_3$:C), avšak liší se v následujících parametrech: čtecí systém, příkon energie stimulujícího laseru působící na centimetr čtvereční detektoru, filtr, doba stimulace, kalibrační metoda a kalibrační zdroj, vyhodnocení OSL křivky. Všechny tyto parametry lze pro používané OSL detektory dohledat v~\cite{dosis}. 
 %nedělat tabulku, vypsat instituce normálně; ze je to jeden materiál (Al$_2$O$_3$:C), ale různé parametry; jejich vyhodnocování probíhá pomocí referenčního zdroje (ten vztah asi nepsat); to je asi vše, bude to krátké
 \subsection{Detektory stop v pevné fázi}
-Všechny používané detektory stop v pevné fázi jsou CR-39. V tab.~\ref{tab:dosis_pouzivaneTED} jsou uvedeny instituce, které TED využívají; tabulka také obsahuje výrobce daného TED. Avšak tato tabulka již není aktuální, jelikož většina institucí přešla v posledních letech na TASTRAK původně využívaný pouze MTA EK. Různorodost využívaných TED a jejich způsobů vyhodnocení totiž komplikovalo vzájemné porovnávání a interpretaci naměřených dat~\cite{cesky}. Důležitými parametry jsou: doba leptání; teplota, při níž leptání probíhá; koncentrace NaOH, jímž se leptalo; odleptaná vrstva; analyzovaná plocha.
+Všechny používané detektory stop v pevné fázi jsou CR-39. V tab.~\ref{tab:dosis_pouzivaneTED} jsou uvedeny instituce, které TED využívají; tabulka také obsahuje výrobce daného TED. Avšak tato tabulka již není aktuální, jelikož většina institucí přešla v posledních letech na TASTRAK o tloušťce 1~mm, který byl původně využíván pouze MTA EK. Různorodost využívaných TED a jejich způsobů vyhodnocení totiž komplikovalo vzájemné porovnávání a interpretaci naměřených dat~\cite{cesky}. TASTRAK, který je v tabulce u IPF, má tloušťku 0,7~mm. Důležitými parametry jsou: doba leptání; teplota, při níž leptání probíhá; koncentrace NaOH, jímž se leptalo; odleptaná vrstva; analyzovaná plocha.
 \begin{table}[h]
   \def\arraystretch{0.8}
   \centering
-  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeny výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu.~\cite{dosis}}
+  \caption{Přehled institucí používající TED, u každé instituce jsou uvedeny výrobci příslušného detektoru. V posledních letech většina institucí přešla k používání TASTRAKu o tloušťce 1~mm.~\cite{dosis}}
   \label{tab:dosis_pouzivaneTED}
   \begin{tabular}{ll}
 	\toprule
 	Institut& Výrobce/Jméno TED\\
 	\midrule
 	DLR&ATP\\
-	MTA EK&TASTRAK\\
+	MTA EK&TASTRAK (1 mm)\\
 	NPI&HARZLAS TD-1\\
-	IPF&TASTRAK\\ 
+	IPF&TASTRAK (0,7 mm)\\ 
 	NIRS&HARZLAS TD-1\\
 		&TechnoTrak\\
 	NASA/SRAG&ATP\\
@@ -173,18 +173,17 @@ Metodika vyhodnocování TED používaných NPI je v oddíle~\ref{sec:praktickaC
 %dát sem tu tabulku celou; CR-39; velmi záleží na hardwaru (mikroskop, kamera) a softwaru!!!
 %pozn.: principy, z čeho co je a proste vše podrobnější si nechat do další kapitoly
 \subsection{Aktivní detektory DOSTEL}\label{experimentDosis_activeDetectors}
-Detektorová jednotka DOSTEL se skládá z dvou křemíkových planárních detektorů s plochou  6,94 cm$^2$ a tloušťkou 315 $\mu$m. Tyto detektory jsou od sebe vzdálené 15 mm a jsou nastaveny ve stejné geometrii jako teleskop. Jednotka může pracovat buď v dávkovém módu (``dose mode''), nebo v teleskopickém/$\mathit{LET}$ módu. V prvním případě se měří četnost nárazů a dávkový příkon, v druhém $\mathit{LET}$ (při náhodném nárazu do obou detektorů se měří délka doletu částice). Z naměřených dat lze určit absorbovanou dávku a dávkový ekvivalent. DOSTEL dokáže zaznamenávat částice s $\mathit{LET}$ v rozsahu 0,5--400 kev/$\mu$m \cite{activeDetectors}. 
+Detektorová jednotka DOSTEL se skládá ze dvou křemíkových planárních detektorů s plochou  6,94 cm$^2$ a tloušťkou 315 $\mu$m. Tyto detektory jsou od sebe vzdálené 15 mm a jsou nastaveny ve stejné geometrii jako teleskop. Jednotka může pracovat buď v dávkovém módu (``dose mode''), nebo v teleskopickém/$\mathit{LET}$ módu. V prvním případě se měří četnost impulzů a dávkový příkon, v druhém $\mathit{LET}$ (při náhodném zaznamenání oběma detektory se měří délka doletu částice). Z naměřených dat lze určit absorbovanou dávku a dávkový ekvivalent. DOSTEL dokáže zaznamenávat částice s $\mathit{LET}$ v rozsahu 0,5--400 kev/$\mu$m~\cite{activeDetectors}. 
 
 V modulu Columbus jsou nainstalovány dvě jednotky DOSTEL v navzájem kolmém směru, což umožňuje získat informace o směrovosti pole záření v modulu. Navíc díky dlouhodobosti měření DOSTEL detektory je možné studovat změny v ozáření během jedenáctiletého slunečního cyklu.
 
-Na obrázku \ref{fig:dosis_activeDetectors} je mimo jiné vidět umístění DOSTELu. Informace v tomto oddíle byly brány z \cite{dosis,activeDetectors}. 
+Na obrázku~\ref{fig:dosis_activeDetectors} je mimo jiné vidět umístění DOSTELu. Informace v tomto oddíle byly brány z~\cite{dosis,activeDetectors}. 
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.8\textwidth]{dosis_activeDetectors.jpg}
-  \caption{V horním obrázku je vidět modrý box, v němž jsou umístěny oba dva DOSTEL detektory; šipky ukazují namíření detektorů. Vlevo dole je vidět označený PDP připojený v blízkosti aktivních detektorů, vpravo dole je ukázáno ovládání jednoho DOSTELu. \cite{dosis2}}
+  \caption{V horním obrázku je vidět modrý box, v němž jsou umístěny oba dva DOSTEL detektory; šipky ukazují namíření detektorů. Vlevo dole je vidět označený PDP připojený v blízkosti aktivních detektorů, vpravo dole je ukázáno ovládání jednoho DOSTELu.~\cite{dosis2}}
   \label{fig:dosis_activeDetectors}
 \end{figure}
-
 %\subsection{Detektory používané NPI}
 %NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhodnocovány pomocí čtecího systému RA’94 (THORN EMI 9789 QB)+TOLEDO 654 TLD Reader; rychlost zahřívání u obou je rovna 10 $^{\circ}$C/s; první není předehříván, druhý je předehříván na 150 $^{\circ}$C (22 s); annealing probíhá 20 minut za 700 $^{\circ}$C (Al$_2$O$_3$:C), respektive 10 minut za 380 $^{\circ}$C (CaSO$_4$:Dy); ochlazovací rychlost je vysoká u obou; kalibrování probíhá u obou pomocí $^{137}$Cs; u obou je vyhodnocována plocha pod vyhřívací křivkou. Oba dva mají průměr roven 5 mm a tloušťku rovnou 1 mm.
 
@@ -196,7 +195,7 @@ Na obrázku \ref{fig:dosis_activeDetectors} je mimo jiné vidět umístění DOS
 \section{Data z luminiscenčních detektorů}\label{sec:dosis_vysledky}
 Zde jsou uvedeny výsledky publikované v \cite{dosis}. Jedná se o data naměřená TL a OSL detektory z obou sad DOSIS a z prvních šesti sad DOSIS3D, tedy o data naměřená mezi lety 2009 a 2015. %Pro větší názornost jsou zde uvedeny i obrázky z \cite{dosis2}, které byly získány z dat naměřených aktivními detektory. 
 
-Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektorem $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů a nakonec jsou výsledky srovnány s daty získaných během jiných experimentů (popsaných ve článcích \cite{passDetectors, dataTLD_RR, ambrozova_dvaExperimenty, pille, pille2, wrmiss_SPD, japonsky}).
+Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektorem $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů a nakonec jsou výsledky srovnány s daty získanými během jiných experimentů (popsaných ve článcích \cite{japonsky,passDetectors, ambrozova_dvaExperimenty, pille, pille2}).
 %Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
 %Vzhledem k tomu, že tato práce je primárně zaměřena na detektory stop v pevné fázi, tak jsou informace v tomto oddíle značně povrchní. %MOZNA ZMENIT?!!!!
 \subsection{Srovnání dat pasivních detektorů v rámci jedné sady}
@@ -222,7 +221,7 @@ Al$_2$O$_3$:C (TLD)	&0,82\\
   \end{tabular}
 \end{table}
 
-Dávkový příkon od $^6$LiF:Mg,Ti, respektive $^6$LiF:Mg,Cu,P je systematicky vyšší než od $^7$LiF:Mg,Ti, resp. $^7$LiF:Mg,Cu,P, což je způsobeno tím, že nuklid $^6$Li má velký účinný průřez pro reakci ($n,\alpha$) s tepelnými neutrony. Nicméně rozdíl mezi těmito dvěma materiály není absorbovaná dávka pocházející od neutronů, ale od záření $\gamma$. Tato dávka je takové velikosti, aby vyvolala stejný termoluminiscenční signál jako skutečně obdržená dávka od neutronů. Tento jev je nazýván gamma ekvivalent neutronové dávky (``gamma-equivalent neutron dose''), \cite{dosis}.
+Dávkový příkon od $^6$LiF:Mg,Ti, respektive $^6$LiF:Mg,Cu,P je systematicky vyšší než od $^7$LiF:Mg,Ti, resp. $^7$LiF:Mg,Cu,P, což je způsobeno tím, že nuklid $^6$Li má velký účinný průřez pro reakci ($n,\alpha$) s tepelnými neutrony. Nicméně rozdíl mezi těmito dvěma materiály není absorbovaná dávka pocházející od neutronů, ale tzv. gamma-equivalent neutron dose. To je dávka od záření $\gamma$ takové velikosti, která vyvolá stejný termoluminiscenční signál jako skutečně obdržená dávka od neutronů,~\cite{dosis}.
 
 V tab. \ref{tab:dosis_TLD_ratio} jsou poměry dávek určených výše zmíněnými detektory s dávkou určenou z TL materiálu $^7$LiF:Mg,Ti. Je vidět, že detektory od NPI mají nejmenší účinnost.
 
@@ -277,7 +276,8 @@ Při porovnávání dat z TLD a DOSTEL je třeba brát v úvahu několik věcí.
 
 Výhodou aktivních detektorů je, že dokážou rozeznat příspěvky k dávce od GCR a od zachycených protonů v SAA.
 \subsection{Srovnání s jinými experimenty}
-\begin{itemize}
+Data z DOSIS a DOSIS3D je možné srovnat i s daty z jiných experimentů. Zde uvedeme srovnání s daty naměřenými v americké, ruské a japonské části ISS. Pro zvýraznění vlivu nadmořské výšky na měření je dále uvedeno i srovnání s daty, která byla naměřena v biologickém satelitu BION-M1 (ten se nacházel v danou dobu v jiné nadmořské výšce než ISS).
+\begin{enumerate}
 \item Na různých místech v americké části ISS jsou od organizace NASA/SRAG umístěné tzv. monitory prostorového rozložení záření (RAM, Radiation Area Monitor), které obsahují termoluminiscenční detektory ($^7$LiF:Mg,Ti) a slouží ke stanovení prostorové distribuce dávky v ISS~\cite{RAM}. Můžeme tedy srovnávat jejich výsledky s výsledky DOSIS/DOSIS3D. RAM detektory měřily na ISS od dubna 2014 do listopadu 2014, celkem 218 dní; tato doba pokrývá pátou a částečně i šestou sadu DOSIS3D (tab.~\ref{tab:dosis_timeline_passive}). V modulu Columbus byly naměřeny dávkové příkony v rozsahu $[216\pm8;313\pm9]$ $\mu$Gy/den, v rámci programu RAM bylo rozpětí naměřených dávkových příkonů $[201\pm5;421\pm12]$ $\mu$Gy/den. Minimum je tedy přibližně stejné, avšak maximum je vyšší pro RAM. To bylo naměřeno v
   blízkosti okénka, a tudíž ho lze spojit s nižším stíněním. Celkově lze z těchto srovnání tvrdit, že dávkové příkony se v jednotlivých modulech mohou v závislosti na lokálním stínění lišit až dvojnásobně.~\cite{dosis}
 
@@ -366,7 +366,7 @@ není \cite{passDetectors}. (Poznámka: lze srovnat obr. \ref{fig:dosis_passDete
 	 Jedná se o TL detektor CaSO$_4$:Dy (avšak v jiné formě než v jakou používá NPI) s čtecím systémem, což umožňuje vyhodnocovat detektory přímo na orbitě. Na ISS se nachází v modulu Zvezda od roku 2003, kde se používá jako osobní dozimetr při CME, při výstupech do vesmíru a také pro mapování prostorové distribuce dávky. Detektory byly v roce 2009 obměněny a v současnosti se jich ve Zvezdě nachází dvanáct. Naměřené dávky neprošly korekcí na $\LET_{\text{H$_2$O}}>10$ keV/$\mu$m a nebyly převedeny na absorbované dávky ve vodě (resp. tkáňově ekvivalentním materiálu). V levé části tab. \ref{tab:dosis_pille} jsou
 	 přibližné rozsahy průměrných týdenních dávkových příkonů naměřených v daný časový úsek.	První časový úsek Pille odpovídá přibližně první sadě DOSIS3D, druhý úsek druhé sadě DOSIS3D a takto to pokračuje až k šestému úseku/šesté sadě. Pravá část tab.~\ref{tab:dosis_pille} obsahuje průměrné hodnoty dávkových příkonů od CaSO$_4$ pro danou sadu; tyto dávkové příkony byly získány přenásobením průměrné hodnoty z $^7$LiF:Mg,Ti (viz obr.~\ref{fig:dosis_vysl_viceSad}) poměrem odezev CaSO$_4$:Dy a $^7$LiF:Mg,Ti (viz tab.~\ref{tab:dosis_TLD_ratio}). Vidíme, že dávkové příkony od Pille jsou systematicky nižší. Částečně to bude dáno tím, že výsledky od Pille nejsou převedeny na absorbovanou dávku ve vodě. Dále pozorujeme, že $\dot{D}$ od Pille sleduje podobný trend jako
 	 $\dot{D}$ od DOSIS3D, tzn. pozvolné klesání.~\cite{pille, pille2}
- \end{itemize}
+ \end{enumerate}
  \textbf{Shrnutí:} V první odrážce jsme srovnali $\dot{D}$ z DOSIS\%DOSIS3D s $\dot{D}$ z americké části ISS (program RAM). Dávkové příkony z RAM měly stejnou minimální hodnotu jako dáv. příkony z modulu Columbus, ale maximální hodnotu měly vyšší. Také se zjistilo, že dávkové příkony se mohou lišit v jednom modulu v závislosti na lokálním stínění až dvojnásobně.
  
  Ve druhé, třetí a šesté odrážce jsme data z DOSIS\&DOSIS3D srovnávali s daty naměřenými v ruské části ISS, hlavně v modulu Zvezda. V druhé odrážce jsme zjistili, že dávkové příkony byly vyšší ve Zvezdě, naopak v třetí a páté vyšly dávkové příkony vyšší v modulu Columbus. Příčinou jiného výsledku v druhé odrážce jsou pravděpodobně odlišné relativní účinnosti použitých TLD (experimentů diskutovaných v druhé odrážce).
