--- a/text/parts/titlepage.tex
+++ b/text/parts/titlepage.tex
@@ -42,7 +42,7 @@ Děkuji Ing. Ivě Ambrožové, Ph.D. za vedení mé bakalářské práce, za cen
                & Oddělení dozimetrie záření, Ústav jaderné fyziky AV ČR, v.v.i., Akademie věd České republiky\\
   Abstrakt: & Kosmické záření představuje veliký zdravotní risk při pobytu ve vesmíru. K jeho monitorování se používají i pasivní detektory, obzvláště pak termoluminiscenční detektory a detektory stop v pevné fázi. Za účelem stanovení prostorové distribuce dávky uvnitř Mezinárodní kosmické stanice proběhlo a probíhá mnoho experimentů. Patří mezi ně i experimenty DOSIS (2009--2011) a DOSIS3D (2012--doposud). Z naměřených dat lze do určité míry vyvodit závislost dávkového příkonu na řadě parametrů, např. sluneční aktivitě a nadmořské výšce. 
   %Tato měření mohou zmenšit možné ozaření lidské posádky při budoucích letech do vesmíru.
-  Tato práce pojednává o složení kosmického záření v blízkém okolí Země, o výše zmíněných pasivních detektorech, o projektech DOSIS a DOSIS3D a nakonec je uvedena názorná ukázka vyhodnocení tří detektorů stop, které byly umístěny v modulu Columbus. \\
+  Tato práce pojednává o složení kosmického záření v blízkém okolí Země, o výše zmíněných pasivních detektorech, o projektech DOSIS a DOSIS3D. V neposlední řadě je uvedena názorná ukázka vyhodnocení tří detektorů stop, které byly umístěny v modulu Columbus. \\
   %Cílem práce bude studovat prostorovou distribuci dávkových veličin na různých místech ISS pomocí kombinace termoluminiscenčních detektorů a detektorů stop v pevné fázi, které byly poustupně umístěny na ISS v posledních několika letech. Student se seznámí s metodikou vyhodnocování detektorů, včetně měření a zpracování dat. \\
   Klíčová slova: & kosmické záření v blízkém okolí Země, detektory stop v pevné fázi, ISS, modul Columbus, DOSIS, DOSIS3D
 \end{tabularx}
@@ -50,7 +50,8 @@ Děkuji Ing. Ivě Ambrožové, Ph.D. za vedení mé bakalářské práce, za cen
 \begin{tabularx}{\textwidth}{>{\itshape}l X}
   Title: & \textbf{Dose distribution inside the International Space Station}\\
   Author: & Michal Šesták\\
-  Abstract: & Cosmic rays represents a huge health risk. Passive detectors are widely used for the measurement, especially thermoluminescent detectors and solid state nuclear track detectors. There were and are many experiments dealing with the determination of radiation environment within the International Space Station. Experiments DOSIS (2009--2011) and DOSIS3D (2012--so far) are two of them. The measured data can provide informations about influence of several parameters (for instance solar activity, altitude) to the dose rate. This thesis includes informations about characterictics of the cosmic rays in low Earth orbit, about passive detectors used in space measurements, about experiments DOSIS and DOSIS3D. There is also involved the evaluation of three track etched detectors at the end of the work.\\
+  Abstract: & Cosmic rays represent enormous health risk during the expeditions in the space. Passive detectors are widely used for its measurement, especially thermoluminescent detectors and solid state nuclear track detectors. Many experiments dealing with the determination of the dose distribution inside the International Space Station are currently running and a lot of them were done in the past. Experiments DOSIS (2009--2011) and DOSIS3D (2012--so far) are two of them. The measured data can provide informations about influence of several parameters (for example solar activity and altitude) to the dose rate. This thesis includes information about characteristics of the cosmic rays in low Earth orbit, about passive detectors used in space measurements, about experiments DOSIS and
+  DOSIS3D. Finally, there is involved the evaluation of three track etched detectors which were placed in the Columbus module.\\
   Key words: & cosmic rays in low Earth orbit, solid state nuclear track detectors, ISS, Columbus module, DOSIS, DOSIS3D
 \end{tabularx}
 \newpage 
