--- a/text/parts/detektory.tex
+++ b/text/parts/detektory.tex
@@ -1,12 +1,12 @@
 \chapter{Pasivní detektory používané k monitorování kosmického záření}\label{sec:detektory_detektory}
-Pasivní detektory nepotřebují napájení, jsou dobře skladné (malé rozměry, malá hmotnost) a bezpečné, což je činí vhodnými měřícími prostředky ve vesmíru. Mezi jejich hlavní zápory patří, že nedodávají data v reálném čase a že pro vyhodnocení musí být zpravidla dopraveny na Zem do příslušné laboratoře~\cite{benton}.
+Pasivní detektory nepotřebují napájení, jsou dobře skladné (malé rozměry, malá hmotnost) a bezpečné, což je činí vhodnými měřícími prostředky ve vesmíru. Mezi jejich hlavní zápory patří, že nedodávají data v reálném čase a že pro vyhodnocení musí být zpravidla dopraveny na Zem do příslušné laboratoře~\cite{benton}. K měření ve vesmíru se ve velké míře používají i aktivní detektory, ale těmi se tato práce nezabývá. 
 
 K monitorování kosmického záření se používají hlavně termoluminiscenční detektory (TLD) a detektory stop v pevné fázi (TED, nuclear track etched detectors/solid state nuclear track detectors). V menší míře se využívají i detektory založené na opticky stimulované luminiscenci (OSLD), bublinkové detektory \ldots V této kapitole rozebereme TLD a TED.
 
-Výstupem z TLD je dávka, která se absorbovala v detektoru za celý čas měření, avšak nezjistí se kvalita záření (většinou). Oproti tomu pomocí TED je navíc možné změřit $\mathit{LET}$ spektrum v rozsahu, který je rozebrán dále v textu; $\mathit{LET}$ je lineární přenos energie. Kombinací dat z TLD a z TED lze určit celkový dávkový ekvivalent~\cite{benton}.
+Výstupem z TLD je dávka, která se absorbovala v detektoru za celý čas měření, avšak nezjistí se kvalita záření (většinou). Oproti tomu pomocí TED je navíc možné změřit $\mathit{LET}$ spektrum v rozsahu, který je rozebrán dále v textu; $\mathit{LET}$ je lineární přenos energie. Kombinací dat z TLD a z TED lze určit celkovou dávku a dávkový ekvivalent~\cite{benton}.
 \section{Termoluminiscenční detektory}\label{sec:detektory_TLD}
-Termoluminiscence je jev vyskytující se u některých pevných látek. Jeho podstata spočívá v tom, že je-li látka ozářena, pak při zahřívání vyzařuje světlo, jehož množství je přímo úměrné energii, která byla při ozáření v látce deponována. Zjednodušeně lze jev vysvětlit následovně: ionizující záření při interakci s látkou mimo jiné vytrhává elektrony z valenčního pásu, čímž vznikají iontové páry (záporný elektron a kladná díra) a vytržené elektrony přecházejí do vodivostního pásu. Část vytržených elektronů anihiluje s děrami (což uvolňuje tepelnou energii), avšak některé z nich se zachytí na tzv. elektronových pastech (nehomogenity v látce atp.). Aby se elektron z pasti dostal, tak mu musí být dodána energie k překonání vazby, což se děje při zahřívání látky. Uvolněný elektron následně
-anihiluje s dírou, přičemž energie je vyzářena ve formě elektromagnetického záření (přibližně ve viditelném spektru) nebo je předána tzv. luminiscenčnímu centru, které energii taktéž přemění na světlo. Luminiscenční centra mohou být tvořena stopovými příměsemi prvků (např. Mn, Dy, Tm, Cu, C, \ldots). Světelný signál je zesílen fotonásobičem a poté vyhodnocen. 
+Termoluminiscence je jev vyskytující se u některých pevných látek. Jeho podstata spočívá v tom, že je-li látka ozářena, pak při zahřívání vyzařuje světlo, jehož množství je přímo úměrné energii, která byla při ozáření v látce deponována. Zjednodušeně lze jev vysvětlit následovně: při interakci ionizujícího záření s látkou detektoru dochází k ionizaci elektronů z valenčního pásu, čímž vznikají iontové páry (záporný elektron a kladná díra) a uvolněné elektrony přecházejí do vodivostního pásu. Část vytržených elektronů anihiluje s děrami (což uvolňuje tepelnou energii), avšak některé z nich se zachytí na tzv. elektronových pastech (nehomogenity v látce atp.). Aby se elektron z pasti dostal, tak mu musí být dodána energie k překonání vazby, což se děje při zahřívání látky. Uvolněný elektron následně
+anihiluje s dírou, přičemž energie je vyzářena ve formě elektromagnetického záření (přibližně ve viditelném spektru). Elektronové pasti mohou být tvořeny stopovými příměsemi prvků (např. Mn, Dy, Tm, Cu, C, \ldots). Světelný signál je zesílen fotonásobičem a poté vyhodnocen. 
 
 Dodání energie pro vytržení elektronu z pasti nemusí být prováděno jen zahříváním látky, ale třeba i jejím osvícením. Tento jev je nazýván optická luminiscence a jsou na něm založeny OSLD.
 
@@ -32,9 +32,9 @@ se používají hlavně plasty, skla a minerální krystaly.
 
 TED jsou schopné měřit pouze částice s $\LET$ vyšším než je určitá prahová hodnota, jež je různá pro odlišné materiály. Pro plasty, které jsou nejcitlivější, se pohybuje kolem 10 keV/$\mu$m~\cite{ambrozova_dvaExperimenty}. Rozsah měřitelných $\LET$ je omezený i shora, tato hodnota také zavisí na materiálu.  
 
-Latentní stopy jsou nejčastěji zvětšovány chemickým leptáním. Tato metoda vychází z faktu, že poškozené části materiálu se leptají rychleji než nepoškozené. Někdy se používá dvoustupňové (per partes) leptání, které má tu výhodu, že po první fázi jsou zřetelné stopy vytvořené částicemi s krátkým dosahem a s velkým $\LET$ ($> 300$ keV/$\mu$m), které by při jednostupňovém dlouhém leptání byly odstraněny, a po druhé fázi naopak lze identifikovat stopy vytvořené částicemi s malým $\LET$ (až do detekčního prahu), čímž se významně zvýší rozsah detekovatelných částic \cite{cesky}. 
+Latentní stopy jsou nejčastěji zvětšovány chemickým leptáním. Tato metoda vychází z faktu, že poškozené části materiálu se leptají rychleji než nepoškozené. Někdy se používá dvoustupňové (per partes) leptání, které má tu výhodu, že po první fázi jsou zřetelné stopy vytvořené částicemi s krátkým dosahem a s velkým $\LET$ ($> 300$ keV/$\mu$m), které by při jednostupňovém dlouhém leptání byly odstraněny, a po druhé fázi naopak lze identifikovat stopy vytvořené částicemi s malým $\LET$ (až do detekčního prahu), čímž se významně zvýší rozsah detekovatelných částic~\cite{cesky}. 
 
-Tvorba latentních stop není doposud plně pochopena. U anorganických materiálů se jej snaží vysvětlit např. mechanismus popsaný v \cite{spikeModel}. U organických materiálů je proces tvorby stop rozdělen do tří fází: fáze fyzikální, fáze fyzikální-chemická a fáze chemická. Při první fázi ztrácí částice v materiálu energii (excitacemi a ionizacemi elektronů z obalu terčíků, vyražením terčíku z polymerové vazby, brzdným záření v případě velké rychlosti částice). Při druhé fázi dochází k interakcím částic vzniklých v první fázi, které vyúsťují ke vzniku latentních stop; latentní stopa se skládá z jádra o průměru cca 10 nm a vnější oblasti o poloměru odpovídající dosahu delta elektronů, viz obr. \ref{fig:detektory_latentTrack}. Poslední fáze představuje leptání, při němž jsou stopy zafixovány
+Tvorba latentních stop není doposud plně pochopena. U anorganických materiálů se jej snaží vysvětlit např. mechanismus popsaný v \cite{spikeModel}. U organických materiálů je proces tvorby stop rozdělen do tří fází: fáze fyzikální, fáze fyzikální-chemická a fáze chemická. Při první fázi ztrácí částice v materiálu energii (excitacemi a ionizacemi elektronů z obalu terčíků, vyražením jádra z polymerové vazby, brzdným záření v případě velké rychlosti částice). Při druhé fázi dochází k interakcím částic vzniklých v první fázi, které vyúsťují ke vzniku latentních stop; latentní stopa se skládá z jádra o průměru cca 10 nm a vnější oblasti o poloměru odpovídající dosahu delta elektronů, viz obr. \ref{fig:detektory_latentTrack}. Poslední fáze představuje leptání, při němž jsou stopy zafixovány
 a zvětšeny.~\cite{thesisKPBrabcova} 
 \begin{figure}[h]
   \centering
@@ -89,12 +89,12 @@ Existuje minimální úhel dopadu částice na detektor, při němž je stopa st
 \end{equation}
 tedy $N^{\text{kor}}=N\cdot k_{\theta}$. 
 
-Celková absorbovaná dávka $D$ a dávkový ekvivalent $H$ můžeme určit ze vztahů 
+Celkovou absorbovanou dávku $D$ v mGy a dávkový ekvivalent $H$ v mSv můžeme určit ze vztahů 
 \begin{align}
   D&=\int\text{konst}\cdot\LET\frac{dN^{\text{kor}}}{d\LET}d\LET\,,\label{eq:Davka}\\
   H&=\int\text{konst}\cdot\LET\cdot Q(\LET)\frac{dN^{\text{kor}}}{d\LET}d\LET\,,\label{eq:EkvDavka}
 \end{align}
-kde $\frac{dN^{\text{kor}}}{d\LET}$ je opravený počet částic na plochu mající $\LET$ v intervalu $d\LET$; $Q$ je jakostní faktor určený podle tab. \ref{tab:detektory_Q} a $\text{konst}=1,602\cdot 10^{-6}$ je převodní konstanta. Vztah byl převzat z~\cite{thesisKPBrabcova}.
+kde $\frac{dN^{\text{kor}}}{d\LET}$ je opravený počet částic na plochu (v cm$^{-2}$) mající $\LET$ (v keV/$\mu$m) v intervalu $d\LET$; $Q$ je jakostní faktor určený podle tab. \ref{tab:detektory_Q} a $\text{konst}=1,602\cdot 10^{-6}$ je převodní konstanta. Vztah byl převzat z~\cite{thesisKPBrabcova}.
 
 \begin{table}[H]
   \centering
